# gl-frame

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/render_pipeline/: CMakeLists.txt
src/render_pipeline/core/: CMakeLists.txt  bindable.h  error.hpp
src/render_pipeline/gl/: CMakeLists.txt  error.hpp  index.cpp  index.h  program.cpp  program.h  shader.h  texture.cpp  texture.h  vertex.h
src/sandbox/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/sandbox/src/: app.cpp  app.h
src/shader/: fragment_shader.fs  vertex_shader.vs
src/util/: CMakeLists.txt
src/window/: CMakeLists.txt
src/window/glfw_backend/: context.cpp  keyboard.h
src/window/glfw_wrap/: CMakeLists.txt  context.h
test/: CMakeLists.txt
